# Interference-quantum-classifier

./: .gitignore  README.md  claude_responce.md  final_comparison_results.json  generate_project_summary.py  helbert_comparison.py  main.py  next direction.md  original_paper_text.txt  project status.md  project_idea.txt  project_summary.md  pyproject.toml  test.py  theory_derivation.md  train_cnn.py  verify_isdo.py  visualize_pcam.py
.opencode/: opencode.json
Documents/: Fidelity_and_Measurement_Free_Methods_Comparison.md
Interference_based/: compute_class_prototypes_k4.py  evaluate_interference_k4.py
Interferenec_quant_classifier/: run_regime3a.py  run_regime3c.py  run_regime3c_consolidation.py
configs/: data.yaml  paths.yaml  train_cnn.yaml
isdo_K_sweep/: evaluate_isdo_k_sweep.py
isdo_circuit/: test_isdo_circuits.py
isdo_circuit_test/: test_isdo_circuit_v2.py  test_isdo_circuits.py  test_isdo_circuits_v1.py
paper_writeup/: initial_drafft.md
research_docs/: Fidelity_and_Measurement_Free_Methods_Comparison.md  Interference Quantum Classifier (iqc) — Full Paper Draft.docx  implementation_plan.md  interference_quantum_classifier_iqc_full_paper_draft.md  interference_quantum_classifier_iqc_paper_draft_non_claim_leaking.md  project_blueprint.md  research_answers.md  task.md
scripts/: compute_class_prototypes_k4.py  compute_class_states.py  evaluate_interference_k4.py  evaluate_statevector_similarity.py  evaluate_swap_test_batch.py  extract_embeddings.py  swap_test_classifier.py  train_cnn.py  train_embedding_models.py  visualize_embeddings.py  (+1 more)
(+543 files in other folders)
