[project]
name = "measurement-free-quantum-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.1",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pylatexenc>=2.10",
    "pyyaml>=6.0.3",
    "qiskit==1.3.2",
    "qiskit-aer-gpu==0.15.1",
    "qiskit-machine-learning==0.7.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]